Fixed a bug where the dropzone area is too small if nothing is there

--- a/src/component/expense-item/expense-item.scss
+++ b/src/component/expense-item/expense-item.scss
@@ -3,4 +3,5 @@
 .expense-item {
   display: block;
   clear: both;
+  padding: 1.5em;
 }
